Istio/kubernetes/order-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: order-api
        image: order-api:latest  # Your custom image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
spec:
  selector:
    app: order-api
  ports:
  - name: http
    port: 80
    targetPort: 80
